# ChangeLog for dev-python/ipython
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/ipython/ChangeLog,v 1.127 2013/11/14 18:48:50 floppym Exp $

  14 Nov 2013; Mike Gilbert <floppym@gentoo.org> ipython-1.0.0.ebuild,
  ipython-1.1.0.ebuild:
  Fix jinja dependency to allow more that one slot to satisfy it.

*ipython-1.1.0 (23 Oct 2013)

  23 Oct 2013; Kacper Kowalik <xarthisius@gentoo.org> +ipython-1.1.0.ebuild:
  Version bump

  26 Sep 2013; Mike Gilbert <floppym@gentoo.org>
  +files/ipython-1.0.0-setuptools.patch, ipython-0.13.2.ebuild,
  ipython-1.0.0.ebuild:
  Add patch to ensure consistent setuptools behavior with python2.

  15 Sep 2013; Markus Meier <maekke@gentoo.org> ipython-1.0.0.ebuild:
  add ~arm, bug #481462

  12 Sep 2013; Michał Górny <mgorny@gentoo.org> ipython-0.12-r1.ebuild,
  ipython-0.13.2.ebuild, ipython-1.0.0.ebuild:
  Replace virtual/pyparsing dep with dev-python/pyparsing. The split versions
  were removed and all in-tree versions support all impls now.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> ipython-0.13.2.ebuild,
  ipython-1.0.0.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  28 Aug 2013; Kacper Kowalik <xarthisius@gentoo.org> ipython-1.0.0.ebuild:
  Use pure ln to fix path for PREFIX

  28 Aug 2013; Kacper Kowalik <xarthisius@gentoo.org> ipython-1.0.0.ebuild:
  Use EPREFIX instead of EROOT in python_install. Thanks to Arfrever for
  reporting

  28 Aug 2013; Kacper Kowalik <xarthisius@gentoo.org> ipython-1.0.0.ebuild:
  Add the rest of the dependencies for nbconvert. Thanks to Arfrever for
  reporting

  28 Aug 2013; Kacper Kowalik <xarthisius@gentoo.org> ipython-1.0.0.ebuild:
  Provide symlink to mathjax in order to  force notebook to use the local
  version. Thanks to Arfrever for his insight in bug #481726

  28 Aug 2013; Kacper Kowalik <xarthisius@gentoo.org> metadata.xml:
  Fix typo in metadata. Thanks to Arfrever for noticing
