@@ -11,4 +11,4 @@ REQUIRED_USE=mongodb? ( || ( python_targets_python2_6 python_targets_python2_7 )
 SLOT=0
 SRC_URI=https://github.com/ipython/ipython/releases/download/rel-1.0.0/ipython-1.0.0.tar.gz
 _eclasses_=distutils-r1	49574f07941f70e03dd1bfa59be559be	elisp-common	cec01e54df1bfd2fcca76a13ce2b2d27	eutils	4878e7f88afc0ba0866ac112190b0fd4	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	python-r1	b81583006559e9b008883355c9889e29	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=fa2fc02e70758a7804605c1d9544c0e9
+_md5_=186f8e70d10a9708715a451073a09586
